--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
+body {
+  margin: 0;
+  padding: 600px 0 0 0 ;
+  background: linear-gradient(135deg, #ffc0cb, #ffe4e1);
+  min-height: 100vh;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  backdrop-filter: blur(6px);
+  overflow-x: hidden;
+}
+
 /* Card container - update for bigger mobile size */
 .card {
-  max-width: 500px;
+  max-width: 800px;
   width: 90%;
   padding: 50px 30px;  /* more breathing space */
   margin: 20px;
@@ -19,7 +32,7 @@ h1 {
 }
 
 .typing {
-  font-size: 1.5rem;   /* BIGGER */
+  font-size: 1.6rem;   /* BIGGER */
   font-weight: 600;
   color: #333;
   margin-bottom: 25px;
@@ -31,10 +44,10 @@ h1 {
 }
 
 p {
-  font-size: 1.2rem;  /* Larger paragraph text */
+  font-size: 1.4rem;  /* Larger paragraph text */
   margin-bottom: 30px;
   color: #444;
-  line-height: 1.8;
+  line-height: 1.9;
 }
 
 /* Button settings */
@@ -43,7 +56,7 @@ button {
   color: white;
   border: none;
   padding: 16px 32px;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: bold;
   border-radius: 30px;
   cursor: pointer;
@@ -90,11 +103,11 @@ button:hover {
   }
 
   .typing {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
   }
 
   p {
-    font-size: 1.1rem;
+    font-size: 1.6rem;
   }
 
   button {
