--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ button {
   color: white;
   border: none;
   padding: 16px 32px;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: bold;
   border-radius: 30px;
   cursor: pointer;
@@ -107,8 +107,8 @@ button:hover {
   }
 
   button {
-    padding: 16px 30px;
-    font-size: 1.7rem;
+    padding: 16px 30px !important;
+    font-size: 2rem !important;
   }
 }
 
