--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
   margin: 0;
-  padding: 0 ;
+  padding: 0;
   background: linear-gradient(135deg, #ffc0cb, #ffe4e1);
   min-height: 100vh;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   font-family: 'Montserrat', sans-serif;
   backdrop-filter: blur(6px);
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 /* Card container - update for bigger mobile size */
@@ -92,6 +93,10 @@ button:hover {
 
 /* Phones and Small Tablets */
 @media (max-width: 600px) {
+  body {
+    padding: 200px 0 0 0 !important;
+  }
+
   .card {
     padding: 50px 25px;
     margin: 20px;
@@ -114,6 +119,10 @@ button:hover {
 
 /* Very large screens */
 @media (min-width: 1200px) {
+  body {
+    padding: 60px 0 0 0 !important;
+  }
+
   .card {
     max-width: 700px;
   }
