--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background: linear-gradient(135deg, #ffc0cb, #ffe4e1);
   min-height: 100vh;
   display: flex;
-  align-items: start;
+  align-items: center;
   justify-content: center;
   font-family: 'Montserrat', sans-serif;
   backdrop-filter: blur(6px);
@@ -120,6 +120,7 @@ button:hover {
 /* Very large screens */
 @media (min-width: 1200px) {
   body {
+    align-items: start;
     padding: 60px 0 0 0 !important;
   }
 
