--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ body {
 
 /* Text settings */
 h1 {
-  font-size: 4rem;   /* BIGGER for mobile */
+  font-size: 2rem;     /* BIGGER for mobile */
   margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 2.7rem;   /* BIGGER */
+  font-size: 1.8rem;   /* BIGGER */
   font-weight: 600;
   color: #333;
 }
@@ -48,7 +48,7 @@ h2 {
 }
 
 p {
-  font-size: 2.6rem;  /* Larger paragraph text */
+  font-size: 1.6rem;  /* Larger paragraph text */
   margin-bottom: 30px;
   color: #444;
   line-height: 1.9;
@@ -60,7 +60,7 @@ button {
   color: white;
   border: none;
   padding: 16px 32px;
-  font-size: 3rem;
+  font-size: 1.4rem;
   font-weight: bold;
   border-radius: 30px;
   cursor: pointer;
@@ -95,8 +95,7 @@ button:hover {
 /* Phones and Small Tablets */
 @media (max-width: 600px) {
   body {
-    align-items: start !important;
-    padding: 200px 0 0 0 !important;
+    color:red;
   }
 
   .card {
@@ -106,7 +105,7 @@ button:hover {
   }
 
   h1 {
-    font-size: 2.0rem;  /* even BIGGER */
+    font-size: 10rem;  /* even BIGGER */
   }
 
   h2{
