--- a/style.css
+++ b/style.css
@@ -117,6 +117,22 @@ button:hover {
     padding: 0;
   }
 
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  p {
+    font-size: 1.6rem;
+  }
+
+  button {
+    font-size: 1.4rem;
+  }
+
   .card {
     max-width: 700px;
   }
