--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 60px 0 0 0;
+  padding: 80px 0 0 0;
   background: linear-gradient(135deg, #ffc0cb, #ffe4e1);
   min-height: 100vh;
   display: flex;
@@ -28,12 +28,12 @@ body {
 
 /* Text settings */
 h1 {
-  font-size: 4.2rem;     /* BIGGER for mobile */
+  font-size: 4.5rem;     /* BIGGER for mobile */
   margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 3.9rem;   /* BIGGER */
+  font-size: 2.3rem;   /* BIGGER */
   font-weight: 600;
   color: #333;
 }
@@ -94,10 +94,6 @@ button:hover {
 
 /* Phones and Small Tablets */
 @media (max-width: 600px) {
-  body {
-    color:red;
-  }
-
   .card {
     padding: 50px 25px;
     margin: 20px;
@@ -115,6 +111,7 @@ button:hover {
   body {
     align-items: start;
     padding: 0;
+    padding-top: 40px;
   }
 
   h1 {
