--- a/style.css
+++ b/style.css
@@ -92,7 +92,19 @@ button:hover {
 /* === Responsive Rules === */
 
 /* Phones and Small Tablets */
-@media (max-width: 600px) {
+@media (max-width: 649px) {
+  h1{
+    font-size: 3rem;
+  }
+
+  h2{
+    font-size:1.6rem;
+  }
+
+  p {
+    font-size:1.5rem;
+  }
+
   .card {
     padding: 50px 25px;
     border-radius: 20px;
@@ -100,14 +112,43 @@ button:hover {
 
   button {
     padding: 16px 30px !important;
-    font-size: 4rem !important;
+    font-size: 1.4rem !important;
   }
+}
+
+/* Medium size device */
+@media (min-width: 650px) {
+  h1{
+    color:red;
+    font-size: 3.1rem;
+  }
+
+  h2{
+    font-size:2.2rem;
+  }
+
+  p{
+    font-size:1.8rem;
+  }
+
+  button{
+    font-size:1.4rem;
+  }
+
+  body {
+    padding: 0;
+    padding-top: 20px;
+  }
+
+  .card {
+    padding:25px 15px;
+  }
+
 }
 
 /* Very large screens */
 @media (min-width: 1200px) {
   body {
-    align-items: start;
     padding: 0;
     padding-top: 40px;
   }
@@ -117,15 +158,15 @@ button:hover {
   }
 
   h2 {
-    font-size: 1.8rem;
+    font-size: 1.7rem;
   }
 
   p {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
 
   button {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
 
   .card {
